--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Culture of Sri Lanka</title>
     <link rel="stylesheet" href="styles.css" />
+    
   </head>
   <body>
     <div class="heading">
@@ -37,12 +38,41 @@
         Discover the beauty of Sri Lanka through our curated image collection.
       </p>
       <div class="gallery">
-        <img src="#" alt="">
-        <img src="#" alt="">
-        <img src="#" alt="">
+        <img src="img/Seegiriya.jpg" alt="Gallery of Wonders1" />
+        <img src="img/Plonnaruwa.jpg" alt="Gallery of Wonders2" />
+        <img src="img/Nine Arc.jpg" alt="Gallery of Wonders3" />
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <div class="container">
+      <h2>Why Choose Us?</h2>
+      <p>Your Gateway to Adventure</p>
+      <div class="why-choose">
+        <div>
+          <h3>Authentic Experiences</h3>
+          <p>Immerse yourself in local traditions and nature’s hidden gems.</p>
+        </div>
+        <div>
+          <h3>Stunning Landscapes</h3>
+          <p>
+            Marvel at breathtaking views from mountains to tropical beaches and
+            more.
+          </p>
+        </div>
+        <div>
+          <h3>Cultural Richness</h3>
+          <p>Delve into the rich history and vibrant culture of Sri Lanka.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="testimonial">
+      <p>
+        “An unforgettable experience that captured the essence of Sri Lanka!”<br />-
+        Jake Doe, Travel Enthusiast
+      </p>
+      <img src="img/nilwella-blue-beach.jpg" alt="Beautiful Beach" />
+    </div>
+ 
   </body>
 </html>
