--- a/index.html
+++ b/index.html
@@ -5,25 +5,176 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Culture of Sri Lanka</title>
     <link rel="stylesheet" href="styles.css" />
-    
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif, serif;
+        background-color: #155264;
+        color: white;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+      }
+
+      .heading {
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+      }
+
+      #head {
+        font-size: 28px;
+        padding-top: 25px;
+        padding-bottom: 15px;
+      }
+      #head-p {
+        font-size: 11px;
+        padding-bottom: 15px;
+      }
+
+      .container {
+        width: 80%;
+        margin: auto;
+        padding: 20px;
+      }
+
+      .flag {
+        width: 200px;
+        padding-bottom: 10px;
+      }
+
+      #intro {
+        font-family: "Times New Roman";
+        font-size: 41px;
+        font-weight: bold;
+        margin: 20px 0;
+      }
+
+      .btn {
+        background-color: #f39c12;
+        color: white;
+        padding: 12px 24px;
+        text-decoration: none;
+        display: inline-block;
+        margin-top: 15px;
+        margin-bottom: 30px;
+        border-radius: 5px;
+        font-size: 18px;
+      }
+
+      p {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+
+      .video {
+        width: 100%;
+        max-width: 800px;
+        margin: 50px auto;
+        position: relative;
+        padding: 50px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .container-video video {
+        width: 90%;
+        height: 500px;
+        border-radius: 50px;
+        object-fit: cover;
+      }
+
+      .gallery-container h2 {
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-size: 60px;
+        height: 20px;
+        padding-bottom: 5px;
+      }
+
+      .gallery-container p {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        padding-bottom: 30px;
+      }
+
+      .gallery {
+        display: flex;
+        justify-content: space-around;
+        margin: 20px auto;
+      }
+
+      .gallery img {
+        width: 30%;
+        border-radius: 10px;
+        padding-bottom: 50px;
+      }
+
+      .why-choose-container h2 {
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-size: 60px;
+        height: 20px;
+        padding-bottom: 5px;
+      }
+
+      .why-choose-container p {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        padding-bottom: 30px;
+      }
+
+      .why-choose {
+        padding: 20px;
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-around;
+        margin: 20px auto;
+      }
+
+      .why-choose div {
+        background-color: #dc975a;
+        padding: 20px;
+        margin: 20px;
+        border-radius: 10px;
+        width: 30%;
+      }
+
+      .testimonial {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 40px auto;
+        padding: 20px;
+      }
+
+      .testimonial img {
+        width: 50%;
+        border-radius: 10px;
+      }
+
+      .testimonial p {
+        width: 40%;
+        padding-left: 30px;
+        font-style: italic;
+      }
+    </style>
   </head>
   <body>
     <div class="heading">
-      <h1>SRI LANKA</h1>
-      <p>Island country in South Asia</p>
+      <h2 id="head">SRI LANKA</h2>
+      <p id="head-p">Island country in South Asia</p>
       <img src="img/Flag_of_Sri_Lanka.jpg" alt="Sri Lanka Flag" class="flag" />
-      <p class="intro">
-        Experience the vibrant culture and breathtaking landscapes of Sri Lanka.
-      </p>
+      <h1 id="intro">
+        Experience the vibrant culture <br />
+        and breathtaking landscapes <br />
+        of Sri Lanka.
+      </h1>
       <p>
-        Join our community and share your journey through the stunning vistas of
-        this island paradise.
+        Join our community and share your journey through the stunning <br />
+        vistas of this island paradise.
       </p>
       <a href="#" class="btn">Start Your Journey</a>
     </div>
 
-    <div class="video">
+    <div class="container-video">
       <video
+        id="playableVideo"
         src="img/Sri Lanka In 4K - Land Of Stunning Natural Wonders  Scenic Relaxation Film.mp4"
         muted
         loop
@@ -32,7 +183,7 @@
       ></video>
     </div>
 
-    <div class="container">
+    <div class="gallery-container">
       <h2>Gallery of Wonders</h2>
       <p>
         Discover the beauty of Sri Lanka through our curated image collection.
@@ -44,15 +195,27 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="why-choose-container">
       <h2>Why Choose Us?</h2>
       <p>Your Gateway to Adventure</p>
       <div class="why-choose">
         <div>
+          <img
+            src="img/mdi--camera-outline.svg"
+            alt="Icon"
+            width="40"
+            height="40"
+          />
           <h3>Authentic Experiences</h3>
           <p>Immerse yourself in local traditions and nature’s hidden gems.</p>
         </div>
         <div>
+          <img
+            src="img/mdi--camera-outline.svg"
+            alt="Icon"
+            width="40"
+            height="40"
+          />
           <h3>Stunning Landscapes</h3>
           <p>
             Marvel at breathtaking views from mountains to tropical beaches and
@@ -60,6 +223,12 @@
           </p>
         </div>
         <div>
+          <img
+            src="img/mdi--camera-outline.svg"
+            alt="Icon"
+            width="40"
+            height="40"
+          />
           <h3>Cultural Richness</h3>
           <p>Delve into the rich history and vibrant culture of Sri Lanka.</p>
         </div>
@@ -73,6 +242,5 @@
       </p>
       <img src="img/nilwella-blue-beach.jpg" alt="Beautiful Beach" />
     </div>
- 
   </body>
 </html>
