--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         padding-left: 30px;
         font-style: italic;
       }
+
+      /* .table-container table{
+        border: 1px;
+        width: 100%;
+        cellpadding
+      } */
     </style>
   </head>
   <body>
@@ -241,6 +247,80 @@
         Jake Doe, Travel Enthusiast
       </p>
       <img src="img/nilwella-blue-beach.jpg" alt="Beautiful Beach" />
+    </div>
+
+    <div class="table-container">
+      <h2>Point of Details</h2>
+      <table
+        border="1"
+        width="100%"
+        cellpadding="10"
+        cellspacing="0"
+        style="background-color: white; color: black; text-align: left">
+      
+        <tr>
+          <th>Category</th>
+          <th>Value</th>
+          <th>Additional Information</th>
+        </tr>
+        <tr>
+          <td>Official Name</td>
+          <td>Democratic Socialist Republic of Sri Lanka</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Capital</td>
+          <td>Sri Jayawardenepura Kotte</td>
+          <td>Administrative: Colombo (Commercial)</td>
+        </tr>
+        <tr>
+          <td>Area</td>
+          <td>65,610 km²</td>
+          <td>(25,332 sq. m.)</td>
+        </tr>
+        <tr>
+          <td>Population</td>
+          <td>Approximately 22 million</td>
+          <td>(2021 estimate)</td>
+        </tr>
+        <tr>
+          <td>Currency</td>
+          <td>Sri Lankan Rupee (LKR)</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>Climate</td>
+          <td>Tropical climate (two monsoon seasons: May to September & December to February)</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Major Religions</td>
+            <td>Buddhism: 70.2% <br> Hinduism: 12.6% <br> Islam: 9.7% <br> Christianity: 7.4%</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Independence Day</td>
+            <td>February 4, 1948</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Major Industries</td>
+            <td>Tea, textiles, tourism, and remittances</td>
+            <td>Also includes agriculture, spices, fisheries, software development</td>
+        </tr>
+        <tr>
+            <td>UNESCO World Heritage Sites</td>
+            <td>Sigiriya, Anuradhapura, Polonnaruwa, Kandy, Galle Fort, etc.</td>
+            <td>More than 8 listed sites</td>
+        </tr>
+        <tr>
+            <td>Official Festivals</td>
+            <td>New Year, Vesak, Thai Pongal, Christmas</td>
+            <td>Esala Perahera, Sinhala-Tamil New Year, etc.</td>
+        </tr>
+      </table>
+
+      
     </div>
   </body>
 </html>
