renamed the video

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container-video">
       <video
         id="playableVideo"
-        src="img/Sri Lanka In 4K - Land Of Stunning Natural Wonders  Scenic Relaxation Film.mp4"
+        src="img/SL-nature.mp4"
         muted
         loop
         onmouseover="this.muted = false; this.play()"
