--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <video
         id="playableVideo"
         src="img/SL-nature.mp4"
+        type="video/mp4"
         muted
         loop
         onmouseover="this.muted = false; this.play()"
